# fater

./: Cargo.toml  README.md  fater.css  fater.js  index.html  iraq-2004.fater  story_template.html
site/: fater_bg.wasm
src/: cli.rs  lib.rs  main.rs  parse.rs  web.rs
