[package]
name = "fater"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.82"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3.82", features   = ['NodeList', 'Event', 'EventTarget', 'PointerEvent', 'Document', 'Element', 'HtmlElement', 'Node', 'Window','Headers', 'Request', 'RequestInit', 'RequestMode', 'Response', 'console']}
